<resources>
    <string name="app_name">Flower Basket</string>
    <string name="splash_title"><u>Flower\nBasket</u></string>
    <string name="splash_subtitle">Flowers for every prayers</string>
    <string name="please_wait">Please wait…</string>
    <string name="dialog_alert">Alert</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_no">NO</string>
    <string name="error_went_wrong">Something went wrong!</string>
    <string name="error_no_internet">No Internet</string>
    <string name="error_internet_msg">Please check internet connection &amp; try again!</string>
    <string name="login"><u>Login</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="user">User</string>
    <string name="vendor">Vendor</string>
    <string name="user_type">User Type:</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="account_type">Account Type</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="search_community">Search your Community here</string>
    <string name="community">Community</string>
    <string name="block">Block</string>
    <string name="flat">Flat</string>
    <string name="forgot_ps"><u>Forgot Password?</u></string>
    <string name="remember_me">Remember Me</string>
    <string name="dialog_error_title">Error!</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_email_msg">A verification email has been sent to your provided email ID.
        Click on the verification link to complete the process.</string>
    <string name="error_enter_name">Please, enter name first!</string>
    <string name="error_enter_email">Please, enter email first!</string>
    <string name="error_invalid_email">Please, enter valid email!</string>
    <string name="error_enter_password">Please, enter password!</string>
    <string name="error_invalid_password">Password must be at least 6 characters!</string>
    <string name="error_enter_mobileNumber">Please, enter mobile number first!</string>
    <string name="error_invalid_mobileNumber">Please, enter valid mobile number!</string>
    <string name="error_enter_community">Please, enter community to get flowers delivered!</string>
    <string name="error_community_match">Invalid community. Please select from the list!</string>
    <string name="error_enter_block">Please, enter block to get flowers delivered!</string>
    <string name="error_enter_flat">Please, enter flat number to get flowers delivered!</string>
    <string name="error_input_empty">Field cannot be empty!</string>
    <string name="user_register_success">User registered successfully!</string>
    <string name="failed">Failed!</string>
    <string name="subscription">Subscription</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="report">Report</string>
    <string name="buy_once">Buy Once</string>
    <string name="subscribe">Subscribe</string>
    <string name="activation_date">Date of Activation</string>
    <string name="registered_community"><u>Registered Community</u></string>
    <string name="order_for_tomorrow"><u>Order For Tomorrow</u></string>
    <string name="welcome_name">Welcome, %s!</string>
    <string name="loose_flowers">Loose Flowers</string>
    <string name="mora">Mora</string>
    <string name="rupee_symbol">₹%1$.2f</string>
    <string name="update_details">Update Details</string>
    <string name="edit_flower_details">Edit Details</string>
    <string name="label_flower_name">Flower Name:</string>
    <string name="label_telugu_name">Telugu Name:</string>
    <string name="label_loose_price">Loose Price:</string>
    <string name="label_mora_price">Mora Price:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="enter_flower_name">Enter Flower Name</string>
    <string name="enter_telugu_name">Enter Telugu Name</string>
    <string name="enter_loose_price">Enter Loose Price</string>
    <string name="enter_mora_price">Enter Mora Price</string>
    <string name="update_flower_details">Update Flower Details</string>
    <string name="error_empty_flower_name">Flower name cannot be empty!</string>
    <string name="error_empty_loose_price">Loose price cannot be empty!</string>
    <string name="error_empty_mora_price">Mora price cannot be empty!</string>
    <string name="order_placed_success">Order placed successfully.</string>
    <string name="subscription_started_success">Subscription started successfully.</string>
    <string name="error_select_interval">Please, select days when you want the flowers to get delivered!</string>
    <string name="select_days"><u>Select Days</u></string>
    <string name="selected_days"><u>Selected Days</u></string>
    <string name="my_profile">My Profile</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="change_user_details">Change User Details</string>
    <string name="change_color_scheme">Change Color Scheme</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="success_user_detail_updated">Details updated successfully!</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_logout">Are you sure want to logout?</string>
    <string name="delete_account">Delete Account?</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_account">This will delete all your account data &amp; you can not retrieve any data from this account in the future!</string>
    <string name="success_delete_account">User account deleted successfully.</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="festival">Festival</string>
    <string name="started_on">Started On : </string>
    <string name="quantity_subscription">Quantity : %d</string>
    <string name="error_no_subscriptions">You have not created any subscriptions yet!</string>
    <string name="warning_delete_subscription">You can\'t revert this action! Are you sure want to delete selected subscription?</string>
    <string name="alert_change_status">Are you sure want to %s selected subscription?</string>
    <string name="status">Status :</string>
    <string name="active">active</string>
    <string name="deactivate">deactivate</string>
    <string name="status_activated">Activated</string>
    <string name="status_deactivated">Deactivated</string>
    <string name="order">Order</string>
    <string name="order_id">Order Id  :  %s</string>
    <string name="optional">Optional</string>
    <string name="error_no_orders">You have no order history from the past 2 weeks!</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="status_pending">Pending</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_in_delivery">In Delivery</string>
    <string name="status_unknown">Unknown</string>
    <string name="alert_cancel_order">Are you sure want to cancel selected order?</string>
    <string name="success_cancelled_order">Order cancelled successfully.</string>
    <string name="post_question"><u>Post a Question</u></string>
    <string name="what_question">What is your Question?</string>
    <string name="post">Post</string>
    <string name="error_question_empty">Please enter question to ask!</string>
    <string name="title_vendor_support"><u>Vendor Support</u></string>
    <string name="title_app_support"><u>App Support</u></string>
    <string name="edit_detail">Edit User Detail</string>
    <string name="edit_email">Email ID:</string>
    <string name="edit_name">Name:</string>
    <string name="edit_mobile_no">Mobile Number:</string>
    <string name="edit_community">Community:</string>
    <string name="edit_block">Block:</string>
    <string name="edit_flat">Flat:</string>
    <string name="update_detail">Update Detail</string>
    <string name="image_error">Cannot retrieve selected image</string>
    <string name="label_current_pass">Current Password:</string>
    <string name="label_new_pass">New Password:</string>
    <string name="label_confirm_pass">Confirm Password:</string>
    <string name="enter_current_pass">Enter Current Password</string>
    <string name="enter_new_pass">Enter New Password</string>
    <string name="enter_confirm_pass">Enter Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="error_enter_curr_password">Please, enter your current password first!</string>
    <string name="error_enter_new_password">Please, enter the new password you want to set!</string>
    <string name="error_enter_confirm_password">Please, enter confirm password first!</string>
    <string name="error_password_not_match">Confirm password does not match to the new password!</string>
    <string name="dialog_settings">SETTINGS</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">App needs permission to use this feature. You can grant them in app settings.</string>
    <string name="permission_denied">You must allow this permission to use this feature.</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="starts_on">Starts On</string>
    <string name="orders_on">Orders On</string>
    <string name="ends_on">Ends On</string>
    <string name="delivers_on">Delivers On</string>
    <string name="quantity">Quantity</string>
    <string name="grams">Grams</string>
    <string name="success_updated">Updated</string>
    <string name="success">Success</string>
    <string name="dialog_yes">Yes</string>
    <string name="success_deleted">Deleted</string>
    <string name="title_choose_date"><u>Choose Date:</u></string>
    <string name="type">Type</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="error_no_report">You have no report for selected date!</string>
    <string name="download">Download</string>
    <string name="delivered_order">Deliver Order</string>
    <string name="label_address">"Address : "</string>
    <string name="alert_delivered_order">Are you sure you delivered this order to %s?</string>
    <string name="success_delivered_order">Order delivered successfully.</string>
    <string name="ordered_on">Ordered On</string>
    <string name="delivery_on">Delivery On</string>
    <string name="customer_details"><u>Customer Details</u></string>
    <string name="generate_order">Generate Order</string>
    <string name="label_total">Total :</string>
    <string name="address">Address</string>
    <string name="order_details"><u>Order Details</u></string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_retry_community_list">Please, retry to get community list!</string>
    <string name="cancel">Cancel</string>
    <string name="total_flower">Total Flowers</string>
    <string name="error_no_flowers">No flowers for selected date!</string>
    <string name="flower">Flower</string>
    <string name="loose_qty">Loose Qty</string>
    <string name="mora_qty">Mora Qty</string>
    <string name="in_grams">(in Grams)</string>
</resources>