<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBg"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <include
                android:id="@+id/backLayout"
                layout="@layout/back_action" />

            <com.flower.basket.orderflower.views.ThemeText
                style="@style/ScreenTitleStyle"
                android:text="@string/change_password" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/screen_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <com.flower.basket.orderflower.views.ThemeText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_current_pass"
                android:textColor="@color/themeTextGrey"
                android:textSize="@dimen/_12ssp" />

            <com.flower.basket.orderflower.views.ThemeEditView
                android:id="@+id/edtCurrentPassword"
                style="@style/AppEditableFieldsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_current_pass"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <com.flower.basket.orderflower.views.ThemeText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_new_pass"
                android:textColor="@color/themeTextGrey"
                android:textSize="@dimen/_12ssp" />

            <com.flower.basket.orderflower.views.ThemeEditView
                android:id="@+id/edtNewPassword"
                style="@style/AppEditableFieldsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_new_pass"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <com.flower.basket.orderflower.views.ThemeText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_confirm_pass"
                android:textColor="@color/themeTextGrey"
                android:textSize="@dimen/_12ssp" />

            <com.flower.basket.orderflower.views.ThemeEditView
                android:id="@+id/edtConfirmPassword"
                style="@style/AppEditableFieldsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_confirm_pass"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </LinearLayout>

        <com.flower.basket.orderflower.views.ThemeButton
            android:id="@+id/btnSubmit"
            style="@style/dialog_button"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingHorizontal="@dimen/_18sdp"
            android:text="@string/update_password" />

    </LinearLayout>

</LinearLayout>