<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/HomeTextBoxStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <View style="@style/DividerStyle" />

    <com.flower.basket.orderflower.views.ThemeText
        android:id="@+id/tvFlowerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_7sdp"
        android:text="@string/name"
        android:textColor="@color/themeTextGrey" />

    <View style="@style/DividerStyle" />

    <com.flower.basket.orderflower.views.ThemeText
        android:id="@+id/tvFlowerTeluguName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_7sdp"
        android:text="@string/name"
        android:textColor="@color/themeTextGrey" />

    <View style="@style/DividerStyle" />

    <com.flower.basket.orderflower.views.ThemeText
        android:id="@+id/tvFlowerType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_7sdp"
        android:text="@string/type" />

    <View style="@style/DividerStyle" />

    <com.flower.basket.orderflower.views.ThemeText
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_7sdp"
        android:text="@string/quantity" />

    <View style="@style/DividerStyle" />

    <!-- Add buttons for changing status and viewing more details -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDelivered"
        android:layout_width="@dimen/_27sdp"
        android:layout_height="@dimen/_27sdp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_day_unchecked"
        android:paddingHorizontal="@dimen/_7sdp" />

    <View style="@style/DividerStyle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivShowMore"
        android:layout_width="@dimen/_27sdp"
        android:layout_height="@dimen/_27sdp"
        android:adjustViewBounds="true"
        android:paddingHorizontal="@dimen/_7sdp"
        app:srcCompat="@drawable/ic_view_more" />

    <View style="@style/DividerStyle" />

</LinearLayout>